--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div id="app" class="bg-[#f2ebe3] h-screen"></div>
+  <div id="app" class="bg-[#f2ebe3] h-screen flex justify-center items-center flex-col"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
 
